--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <div class="footer-item">
-                                <h3 class="text-white mb-4"><i class="fas fa-bolt text-primary me-3"></i>Electra</h3>
+                                <h3 class="text-white mb-4"><i class="fas fa-bolt text-primary me-3"></i>Elio energies</h3>
                                 <p class="mb-3">From solar installations to energy-efficient upgrades, we’re here to make renewable energy accessible and affordable.</p>
                             </div>
                         </div>
