--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
         <!-- Services End -->
 
         <!-- Projects Start -->
-        <div class="container-fluid projects bg-light py-5">
+<!--         <div class="container-fluid projects bg-light py-5">
             <div class="container py-5">
                 <div class="row g-5">
                     <div class="col-lg-5 wow fadeInLeft" data-wow-delay="0.2s">
@@ -482,7 +482,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Projects End -->
 
 
